fixed overflow

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,5 +1,6 @@
 body {
     background-color: rgb(0, 2, 13);
+    overflow: hidden;
 }
 
 .main-view {
